<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo1"
            />


        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_marginTop="30sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_marginTop="30sp" />


            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:text="Remember me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp" />

            <!-- Login Button -->

        <Button
            style="@style/button_text"
            android:background="@drawable/red_button"
            android:gravity="center"

            android:layout_marginLeft="70sp"
            android:layout_marginRight="70sp"

            android:id="@+id/btnlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_login" />

        <!-- Link to Login Screen -->

        <Button
            style="@style/button_text"
            android:background="@drawable/red_button"


            android:layout_marginLeft="70sp"
            android:layout_marginRight="70sp"

            android:id="@+id/btnsignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>

</RelativeLayout>
