<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/android"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:background="@color/white"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText

                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_marginTop="30sp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:text="Remember me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp" />
            <!-- Login Button -->

            <Button
                android:id="@+id/btnlogin"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:textAllCaps="false"
                android:layout_marginTop="20dip"
                android:background="@drawable/red_button"
                android:gravity="center"

                android:text="@string/btn_login" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnsignup"
                style="@style/button_text"


                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_marginTop="40dip"
                android:background="@drawable/red_button"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
