<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/android"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30sp"
                android:src="@mipmap/logo1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/adm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="Admission number"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/spin1"
                android:layout_width="match_parent"
                android:layout_height="43sp"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="#ffff"
                android:entries="@array/school"
                android:prompt="@string/school"
                android:textColor="@color/input_register" />


            <Spinner
                android:id="@+id/spin2"
                android:layout_width="match_parent"
                android:layout_height="43sp"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="#ffff"
                android:entries="@array/year"
                android:prompt="@string/year"
                android:textColor="@color/input_register" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_conpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/conpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="Confirm password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnreg"
                style="@style/button_text"
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="70sp"

                android:layout_marginRight="70sp"
                android:layout_marginTop="20dip"
                android:background="@drawable/red_button"
                android:gravity="center"
                android:text="Sign Up" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_back_to_login"
                style="@style/button_text"


                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_marginTop="40dip"
                android:background="@drawable/red_button"

                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textSize="15dp"

                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</android.support.design.widget.CoordinatorLayout>